# ai_pokemon

./: .gitignore  Assistant: README.md  README.md  README_USAGE.md  benchmark_parallel.py  debug_embedding.py  debug_moveset_gen.py  debug_ray_env.py  debug_threaded_env.py  evaluate_manager.py  evaluate_risk.py  focus.md  inspect_csv.py  main.py  plot_training.py  pyproject.toml  readme2.md  setup_showdown.sh  start_servers_host.sh  start_training.py  test_connection.py  test_env.py  test_integration.py  test_parser.py  test_simulator.py  train_battle_agent.py  train_battler.py  train_dojo.py  train_dojo_ray.py  train_manager.py  train_mock.py  watch_agent.py
data/: Default Mode Bosses v4.1 (with EVs) - Radical Red - Indigo League.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Johto Leaders.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Kanto Leaders.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Kanto Rematch.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Mini Bosses.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Optional Bosses.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Rivals.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Team Rocket.csv  Default Mode Bosses v4.1 (with EVs) - Radical Red - Trainer Order.csv  Item, TM, and Move Tutor Locations v4.1 - Radical Red - Care Packages.csv  Item, TM, and Move Tutor Locations v4.1 - Radical Red - Overworld Items.csv  Item, TM, and Move Tutor Locations v4.1 - Radical Red - Shops.csv  Item, TM, and Move Tutor Locations v4.1 - Radical Red - TMs & HMs.csv  (+9 more)
(+89 files in other folders)
