[project]
name = "ai-pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "poke-env>=0.6.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
]
