[project]
name = "ai-pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "stable-baselines3>=2.3.2",
    "sb3-contrib>=2.3.0",
    "gymnasium>=0.29.1",
    "poke-env>=0.6.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "matplotlib>=3.10.7",
]
